# pillchecker-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.biomcp  README.md  docker-compose.ci.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yml  ci-tests.yml  ci.yml
app/: main.py
app/api/: analyze.py  health.py  interactions.py  schemas.py
app/clients/: biomcp_client.py  drugbank_client.py  openfda_client.py  rxnorm_client.py
app/data/: ddinter_store.py  fda_store.py
app/middleware/: api_key.py
app/nlp/: dosage_parser.py  ner_model.py  severity_classifier.py
app/services/: drug_analyzer.py  interaction_checker.py
data/: fda_interactions.db
drugbank-mcp-server/: package-lock.json  package.json
drugbank-mcp-server/scripts/: build-db.js  download-db.js
drugbank-mcp-server/src/: drugbank-api.js
scripts/: ci-startup.sh  e2e-test.sh  entrypoint.sh  prod-startup.sh  smoke-test.sh  sync_fda_data.py
tests/: test_api.py  test_api_key.py  test_biomcp_client.py  test_ddinter_store.py  test_dosage_parser.py  test_drug_analyzer.py  test_drugbank_client.py  test_fda_integration.py  test_fda_store.py  test_fda_sync.py  test_interaction_checker.py  test_openfda_client.py  test_rxnorm_client.py  test_severity_classifier.py
