[project]
name = "pillchecker-api"
version = "0.1.0"
description = "Medication interaction checker API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "transformers>=4.48.0",
    "torch>=2.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
